@@ -5,6 +5,11 @@
 #'   \code{\link{continuous_scale}}
 #' @param guide Guide to use for this scale - defaults to \code{"none"}.
 #' @examples
+#' ggplot(luv_colours, aes(u, v)) +
+#'   geom_point(aes(colour = col), size = 3) +
+#'   scale_color_identity() +
+#'   coord_equal()
+#'
 #' df <- data.frame(
 #'   x = 1:4,
 #'   y = 1:4,
